hydra-go/core/references/testdata/kubernetes/networking.k8s.io_v1/Ingress/default-backend.given.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
spec:
  defaultBackend:
    service:
      name: default-service
      port:
        number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: default-service
  namespace: default
spec:
  selector:
    app: default-app
  ports:
    - port: 80
      targetPort: 8080
